Add iOS "small" libs

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         </section>
         <section>
             <section>
-                <h3>Any <code>small</code> library out here?</h3>
+                <h3>Any <code>small</code> Android library out here?</h3>
             </section>
             <section>
                 <h3>Kraph</h3>
@@ -168,6 +168,25 @@
                     <li>More expressive but less concise</li>
                     <li>Quite easy to maintain</li>
                 </ol>
+            </section>
+        </section>
+        <section>
+            <section>
+                <h3>Any <code>small</code> <span style="text-transform: lowercase;">i</span>OS library out here?</h3>
+            </section>
+            <section>
+                <ul>
+                    <li>https://github.com/WeltN24/GraphQLicious</li>
+                    <li>https://github.com/JanGorman/Chester</li>
+                    <li>https://github.com/LeToteTeam/Stardaze</li>
+                    <li>https://github.com/Anobisoft/ASGraphQLClient <small>(Objective-C)</small></li>
+                </ul>
+            </section>
+            <section>
+                <h3>Chester Code Example</h3>
+                <p>
+                    TODO
+                </p>
             </section>
         </section>
         <section>
