--- a/index.html
+++ b/index.html
@@ -193,6 +193,23 @@
             <section>
                 <h3>Any lib to generate typed code from query string?</h3>
             </section>
+            <section
+                    data-background-image="https://media1.tenor.com/images/0d051bc256ec40e7ac80e3fd56ed9390/tenor.gif?itemid=4349636">
+            </section>
+            <section>
+                <img style="padding-left: 40px"
+                     data-src="https://cdn-images-1.medium.com/max/506/1*ii79rz_-iauM21n4L3g9Ug@2x.png" alt="" src="">
+            </section>
+            <section>
+                <h4>Write queries, not code.</h4>
+            </section>
+            <section>
+                <h4>How to?</h4>
+                <ol>
+                    <li>Store queries in <code>*.graphql</code> files (1 by query; can contain fragment)</li>
+                    <li>Use <code>apollo-codegen</code> to download schema</li>
+                </ol>
+            </section>
         </section>
         <footer>
             <span class="footer-left">Simone <a href="https://twitter.com/viteinfinite">@viteinfinite</a></span>
