--- a/index.html
+++ b/index.html
@@ -204,12 +204,60 @@
                 <h4>Write queries, not code.</h4>
             </section>
             <section>
-                <h4>How to?</h4>
+                <h4>Android: How to?</h4>
                 <ol>
                     <li>Store queries in <code>*.graphql</code> files (1 by query; can contain fragment)</li>
                     <li>Use <code>apollo-codegen</code> to download schema</li>
                 </ol>
             </section>
+            <section>
+                <h3><span style="text-transform: lowercase">i</span>OS: How to?</h3>
+                <ol>
+                    <li>Install the Apollo framework into your project and link it to your application target</li>
+                    <li>Install <code>apollo-codegen</code> globally through <code>npm</code></li>
+                    <li>Add a schema file to your target directory</li>
+                    <li>Add a code generation build step to your target</li>
+                    <li>Build your target</li>
+                    <li>Add the generated API file to your target</li>
+                    <li>Create <code>.graphql</code> files with your queries or mutations and add them to your target</li>
+                </ol>
+            </section>
+            <section>
+                <h4>1. Install Apollo Library</h4>
+                <pre><code data-trim data-noescape>
+                    pod 'Apollo', '~> 0.7.0'
+                    github "apollographql/apollo-ios" "0.7.0"
+                </code></pre>
+
+                <h4>2. Install Apollo Codegen</h4>
+                <pre><code data-trim data-noescape>
+                    npm install -g apollo-codegen
+                </code></pre>
+            </section>
+            <section>
+                <h4>3. Download the schema</h4>
+                <pre><code data-trim data-noescape>
+                    apollo-codegen download-schema http://HOST:PORT/graphql --output schema.json
+                </code></pre>
+
+                <h4>4. Add Build Step</h4>
+                <pre><code data-trim data-noescape>
+                    APOLLO_FRAMEWORK_PATH="$(eval find $FRAMEWORK_SEARCH_PATHS -name "Apollo.framework" -maxdepth 1)"
+
+                    if [ -z "$APOLLO_FRAMEWORK_PATH" ]; then
+                        echo "error: Couldn't find Apollo.framework in FRAMEWORK_SEARCH_PATHS;"
+                        exit 1
+                    fi
+
+                    cd "${SRCROOT}/${TARGET_NAME}"
+                    $APOLLO_FRAMEWORK_PATH/check-and-run-apollo-codegen.sh generate $(find . -name '*.graphql') --schema schema.json --output API.swift
+                </code></pre>
+            </section>
+            <section>
+                <h4>5. Build</h4>
+                <h4>6. Add the generated file (<code>API.swift</code>)</h4>
+                <h4>7. Add <code>.graphql</code> files and rebuild</h4>
+            </section>   
         </section>
         <footer>
             <span class="footer-left">Simone <a href="https://twitter.com/viteinfinite">@viteinfinite</a></span>
