Split Apollo for iOS to a new session

--- a/index.html
+++ b/index.html
@@ -210,6 +210,8 @@
                     <li>Use <code>apollo-codegen</code> to download schema</li>
                 </ol>
             </section>
+        </section>
+        <section>
             <section>
                 <h3><span style="text-transform: lowercase">i</span>OS: How to?</h3>
                 <ol>
